--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ h6 tt, h6 code {
   font-size: inherit; }
 
 h1 {
-  font-size: 22px;
+  font-size: 28px;
   color: black; }
 
 h2 {
-  font-size: 20px;
+  font-size: 24px;
   border-bottom: 1px solid #cccccc;
   color: black; }
 
@@ -383,22 +383,22 @@ sup {
 
 <h3>5. 布局文件中的id命名</h3>
 
-<p><del><strong>规则：</strong> 使用 <strong>前缀_逻辑名称</strong> 命名。使用驼峰规则，单词间以下划线分割，并且使用名词或名词词组。</del>  <code>注：引入入androidannotations后，全部统一使用驼峰命名</code></p>
+<p><del><strong>规则：</strong> 使用 <strong>前缀_逻辑名称</strong> 命名。使用驼峰规则，单词间以下划线分割，并且使用名词或名词词组。</del>  <code>注：引入入butterknife后，全部统一使用驼峰命名，**类变量名和布局文件id名称保持一直**，参加下面规则说明。变量名可以让开发人员第一眼就知道这个控件代表什么意思，而不是代表什么控件，也能使命名保持简洁。</code></p>
 
 <p><strong>规则：</strong> 使用 <strong>前缀+逻辑名称</strong> 命名。全部单词小写，单词间以下划线分割，并且使用名词或名词词组。</p>
 
 <p><strong>控件前缀规则：</strong></p>
 
-<pre><code>* TextView/EditText: text
+<pre><code>* TextView/EditText: ~~ text ~~ 请使用实际意义的名称，前缀多余，如name, title, passowrd
 * Button/RadioButton/ImageButton: btn
-* ImageView: img
-* RelativeLayout/LinearLayout: layout
+* ImageView: ~~ img ~~ 请使用实际意义的名称，前缀多余，如logo，productImg
+* RelativeLayout/LinearLayout: layout，
 * ListView：listView
 * WebView: webView
 </code></pre>
 
 <ul>
-<li>如：TextView @+id/textName</li>
+<li>如：TextView @+id/name</li>
 <li>如：Button @+id/btnSearch</li>
 </ul>
 
